<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New">


  <Button
      android:id="@+id/כנון"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="156dp"
      android:text="@string/כנון"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.698"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/כיול"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="96dp"
      android:text="@string/כיול"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.812"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/נוות"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="96dp"
      android:text="@string/נוות"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.698"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/בדוק"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="36dp"
      android:text="@string/בדוק"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.812"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/עדכן"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="36dp"
      android:text="@string/עדכן"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.698"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/הצפן"
      android:layout_width="75dp"
      android:layout_height="60dp"
      android:layout_marginBottom="156dp"
      android:text="@string/הצפן"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.812"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:text="@string/back"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.076"
      app:layout_constraintStart_toStartOf="parent" />



  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="match_parent"
      android:layout_height="805dp"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.573"
      app:srcCompat="@drawable/tmaps"
      android:contentDescription="@string/todo" />

  <Button
      android:id="@+id/mybutton"
      android:layout_width="37dp"
      android:layout_height="35dp"
      android:background="@drawable/circlebutton"
      android:padding="10dp"
      android:textColor="#ff0000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/imageView6"
      app:layout_constraintHorizontal_bias="0.923"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.204" />

  <TextView
      android:id="@+id/mytext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text=""
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/imageView6"
      app:layout_constraintHorizontal_bias="0.458"
      app:layout_constraintStart_toStartOf="@+id/imageView6"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.262" />


</androidx.constraintlayout.widget.ConstraintLayout>